[tool.poetry]
name = "repl_python3_nextcord-Bot-Template-with-Cogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
aiosqlite = "^0.17.0"
replit = "^3.2.4"
pysqlite3 = "^0.4.6"
aiohttp = "^3.8.1"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
discord = "^2.1.0"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
